<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@android:color/white"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    android:layout_marginStart="15dp"
    android:layout_marginEnd="15dp"
    app:strokeWidth="0dp"
    app:cardElevation="1dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp">

        <ImageView
            android:id="@+id/status_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingEnd="10dp"
            android:paddingStart="0dp"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            android:src="@drawable/btn_resolved"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/view_1"/>

        <TextView
            android:id="@+id/task_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task_title"
            android:fontFamily="@font/amsipro_bold"
            android:lines="1"
            android:ellipsize="end"
            android:textSize="15pt"
            android:textColor="@color/red"
            app:layout_constraintStart_toEndOf="@id/status_icon"
            app:layout_constraintTop_toTopOf="parent"/>

        <View
            android:id="@+id/view_1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="@color/creme"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/task_title"/>

        <TextView
            android:id="@+id/tv_due_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/due_date"
            android:fontFamily="@font/amsipro_regular"
            android:textSize="10pt"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_1"/>

        <TextView
            android:id="@+id/tv_days_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/days_left"
            android:fontFamily="@font/amsipro_regular"
            android:textSize="10pt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_1"/>

        <TextView
            android:id="@+id/task_due_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/apr_23_2016"
            android:fontFamily="@font/amsipro_bold"
            android:textSize="15pt"
            android:textColor="@color/red"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_due_date"/>

        <TextView
            android:id="@+id/task_days_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/amsipro_bold"
            android:textSize="15pt"
            android:textColor="@color/red"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_due_date"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>