<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="5dp"
    android:paddingEnd="5dp"
    android:background="@color/yellow"
    tools:context=".ui.fragment.TaskDetailFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/arrow_back"
            android:src="@drawable/arrow_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/amsipro_bold"
            android:text="Task Detail"
            android:textColor="@android:color/white"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <!--  <ImageView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:src="@drawable/task_details"
          android:layout_marginTop="10dp"
          android:layout_marginStart="10dp"
          android:layout_marginEnd="10dp"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintTop_toBottomOf="@id/header_view"/>-->


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/task_details"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_view">

        <TextView
            android:id="@+id/task_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:ellipsize="end"
            android:maxLines="4"
            android:fontFamily="@font/amsipro_bold"
            android:text="Task Title"
            android:textColor="@color/red"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view_1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="@color/creme"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/task_title" />

        <TextView
            android:id="@+id/tv_due_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/amsipro_regular"
            android:text="Due Date"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_1" />

        <TextView
            android:id="@+id/tv_days_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/amsipro_regular"
            android:text="Days left"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_1" />

        <TextView
            android:id="@+id/task_due_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/amsipro_bold"
            android:text="Apr 23 2016"
            android:textColor="@color/red"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_due_date" />

        <TextView
            android:id="@+id/task_days_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/amsipro_bold"
            android:text="12"
            android:textColor="@color/red"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_due_date" />

        <View
            android:id="@+id/view_2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="@color/creme"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/task_days_left" />

        <TextView
            android:id="@+id/task_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/amsipro_regular"
            android:text="Put traces onto login and dashboard flows. Break the traces into sequences representing fetching, parsing and storing data"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_2" />

        <View
            android:id="@+id/view_3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="@color/creme"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/task_detail" />

        <TextView
            android:id="@+id/task_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/amsipro_bold"
            android:layout_marginTop="2dp"
            android:text="Unresolved"
            android:textColor="@color/yellow"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_3"
            app:layout_constraintBottom_toBottomOf="@id/view_4"/>

        <View
            android:id="@+id/view_4"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="@color/creme"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/task_status" />

        <TextView
            android:id="@+id/task_comments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:visibility="gone"
            android:fontFamily="@font/amsipro_regular"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_4" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/resolve_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="55dp"
        android:fontFamily="@font/amsipro_bold"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="5dp"
        android:text="Resolve"
        app:backgroundTint="@color/green"
        app:cornerRadius="8dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@id/not_resolve_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl_detail" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/not_resolve_btn"
        android:layout_width="0dp"
        android:minHeight="55dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/amsipro_bold"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="5dp"
        android:lines="1"
        android:text="Can't Resolve"
        app:backgroundTint="@color/red"
        app:cornerRadius="8dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/resolve_btn"
        app:layout_constraintTop_toBottomOf="@id/cl_detail" />

    <ImageView
        android:id="@+id/iv_resolved"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/sign_resolved"
        android:visibility="gone"
        android:contentDescription="@string/sign_resolved"
        app:layout_constraintTop_toBottomOf="@id/cl_detail"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/iv_not_resolved"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/unresolved_sign"
        android:visibility="gone"
        android:contentDescription="@string/unresolved_sign"
        app:layout_constraintTop_toBottomOf="@id/cl_detail"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>